# REweread

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  release-manifest.json
.github/: pull_request_template.md
apps/: README.md
apps/weread-qt/: BookDetailPage.qml  CMakeLists.txt  FreeNoteAnchor.js  MagicNotebookPage.qml  Main.qml  PinyinEngine.js  PinyinLexicon.js  QrLoginScreen.qml  ReaderPage.qml  ShelfPage.qml  SleepCoverScreen.qml  SocialAnchor.js  SoftKeyboardPanel.qml  account_store.cpp  account_store.h  ai_reply_store.cpp  ai_reply_store.h  app_control.cpp  app_control.h  book_catalog_store.cpp  book_catalog_store.h  direct_ink_framebuffer.cpp  direct_ink_framebuffer.h  discover_store.cpp  discover_store.h  download_store.cpp  download_store.h  frontlight_store.cpp  frontlight_store.h  ink_canvas_item.cpp  ink_canvas_item.h  magic_reply_ink_item.cpp  magic_reply_ink_item.h  main.cpp  network_store.cpp  network_store.h  notes_store.cpp  notes_store.h  ocr_setup_server.cpp  ocr_setup_server.h  (+14 more)
docs/: README.md  agent-handoff.md  agent-upgrade-v1.5.md  agent-upgrade-v2.0.md  baidu-ocr-configuration-flow.md  compatibility.md  dependencies.md  handwriting-annotation-plan.md  handwriting-input-evaluation.md  legal-and-commercial-use.md  quick-start-user-guide.md  release-checklist.md  third-party-notices.md  troubleshooting.md  weread-native-font-rendering.md  weread-native-runtime-proof.md  weread-web-flow.md  xiaohongshu-community-install-post.md
scripts/: bootstrap-remarkable-sdk.sh  build-weread-qt.sh  check-repository.mjs  download-reader-fonts.sh  fetch-build-dependencies.sh  generate-pinyin-lexicon.mjs  install-weread-qt-appload.sh  install-xovi-autostart.sh  package-source-release.sh  package-weread-plugin.sh  probe-move-stylus.sh  run-weread-qt-on-move.sh  sync-weread-app.sh  sync-weread-plugin.sh  test-weread-social-clicks-on-move.sh  uninstall-weread-qt-appload.sh  verify-cookie-renewal.mjs  (+2 more)
(+119 files in other folders)
